--- a/index.html
+++ b/index.html
@@ -1,40 +1,155 @@
 <!DOCTYPE html>
-<html lang="he">
+<html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>להב סטודיו - צור קשר</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
+  <meta name="theme-color" content="#3b1dff"/>
+  <title>להב סטודיו — צילום מגנטים לאירועים</title>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css?v=522"/>
 </head>
 <body>
-  <header>
-    <nav class="nav-links">
-      <a href="#gallery">גלריה</a>
-      <a href="#services">שירותים</a>
-      <a href="#packages">חבילות</a>
-      <a href="#contact">צור קשר</a>
-    </nav>
+  <header class="site-header">
+    <div class="container">
+      <div class="header-bar">
+        <nav class="main-nav" aria-label="ראשי">
+          <a href="#services">שירותים</a>
+          <a href="#packages">חבילות</a>
+          <a href="#gallery">גלריה</a>
+          <a href="#contact" class="btn small">דברו איתי</a>
+        </nav>
+      </div>
+      </div>
+    </div>
   </header>
 
-  <main>
-    <section id="contact">
-      <h2>צור קשר</h2>
-      <form id="contactForm">
-        <input type="text" id="name" placeholder="שם מלא" required>
-        <input type="tel" id="phone" placeholder="מספר פלאפון" required>
-        <input type="text" id="eventType" placeholder="סוג האירוע (בר מצווה, חתונה...)" required>
-        <input type="date" id="eventDate" required>
-        <select id="package">
-          <option value="Basic">Basic</option>
-          <option value="Pro">Pro</option>
-          <option value="Premium">Premium</option>
-        </select>
-        <textarea id="message" placeholder="פרטים נוספים שחשוב שתדע..."></textarea>
-        <button type="submit">שליחה</button>
-      </form>
+  <main id="home">
+    <section class="hero">
+      <div class="hero-content container">
+        <h1>כשהאירוע שלכם הופך לקטלוג ✨</h1>
+        <p class="subtitle">מגנטים בעיצוב אישי — עם סטייל, אווירה ואיכות.</p>
+        <div class="cta-row">
+          <a href="#contact" class="btn primary" data-plan="Pro">לבירור מחיר (Pro)</a>
+          <a href="#gallery" class="btn ghost">לגלריה</a>
+        </div>
+        <div class="hero-badges" role="list">
+          <span role="listitem">איכות הדפסה גבוהה</span>
+          <span role="listitem">צילום מקצועי</span>
+          <span role="listitem">עיצוב מותאם אישית</span>
+        </div>
+      </div>
+    </section>
+
+    <section id="services" class="section">
+      <div class="container">
+        <h2>מה אנחנו מציעים</h2>
+        <div class="cards">
+          <article class="card"><h3>צילום מגנטים לאירועים</h3><p>כיסוי מלא של האירוע, צילומי אורחים טבעיים ועמדת צילום ממותגת.</p></article>
+          <article class="card"><h3>עיצוב מסגרות אישיות</h3><p>מסגרות ייחודיות לפי סגנון האירוע והמותג האישי שלכם.</p></article>
+          <article class="card"><h3>סטודיו נייד</h3><p>תאורה מקצועית וזרימת עבודה מהירה — כך שהאורחים מקבלים מגנטים יפים בזמן קצר.</p></article>
+          <article class="card"><h3>גלריית אונליין</h3><p>עמוד שיתוף דיגיטלי לאורחים לאחר האירוע (אופציונלי).</p></article>
+        </div>
+      </div>
+    </section>
+
+    <section id="packages" class="section alt">
+      <div class="container">
+        <h2>חבילות פופולריות</h2>
+        <div class="packages-grid">
+          <article class="package">
+            <header><h3>Basic</h3><div class="tag">לאירועים קטנים</div></header>
+            <ul><li>שעתיים צילום</li><li>עמדת מגנטים מעוצבת</li><li>150 מגנטים</li><li>מסגרת מותאמת</li></ul>
+            <a class="btn primary" href="#contact" data-plan="Basic">לבירור מחיר</a>
+          </article>
+          <article class="package">
+            <header><h3>Pro</h3><div class="tag">רוב האירועים</div></header>
+            <ul><li>4 שעות צילום</li><li>עמדת מגנטים + צלם שטח</li><li>300 מגנטים</li><li>2 עיצובים למסגרות</li></ul>
+            <a class="btn primary" href="#contact" data-plan="Pro">לבירור מחיר</a>
+          </article>
+          <article class="package">
+            <header><h3>VIP</h3><div class="tag">כיסוי מלא</div></header>
+            <ul><li>עד סיום האירוע</li><li>2 צלמים + תאורה מתקדמת</li><li>500 מגנטים</li><li>גלריה דיגיטלית ממותגת</li></ul>
+            <a class="btn primary" href="#contact" data-plan="VIP">לבירור מחיר</a>
+          </article>
+        </div>
+        <p class="fine">* המחירים מותאמים לאופי האירוע והיקפו. דברו איתי להצעת מחיר קצרה והוגנת.</p>
+      </div>
+    </section>
+
+    <section id="gallery" class="section">
+      <div class="container">
+        <h2>גלריה</h2>
+        <div class="cat-wrap" style="position:static;top:auto;">
+          <div class="cat-inner">
+            <button class="chip active" data-cat="all">הכול</button>
+            <button class="chip" data-cat="wedding">חתונות</button>
+            <button class="chip" data-cat="bm">בר/בת מצווה</button>
+            <button class="chip" data-cat="corporate">אירועי חברה</button>
+          </div>
+        </div>
+        <div class="gallery-grid">
+          <button class="g-item" data-cat="wedding"><img src="gallery_01.PNG" alt="גלריה 1"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_02.PNG" alt="גלריה 2"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_03.PNG" alt="גלריה 3"></button>
+<button class="g-item" data-cat="wedding"><img src="gallery_04.PNG" alt="גלריה 4"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_05.PNG" alt="גלריה 5"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_06.PNG" alt="גלריה 6"></button>
+<button class="g-item" data-cat="wedding"><img src="gallery_07.PNG" alt="גלריה 7"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_08.PNG" alt="גלריה 8"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_09.PNG" alt="גלריה 9"></button>
+<button class="g-item" data-cat="wedding"><img src="gallery_10.PNG" alt="גלריה 10"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_11.PNG" alt="גלריה 11"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_12.PNG" alt="גלריה 12"></button>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="section">
+      <div class="container">
+        <h2>דברו איתי</h2>
+        <form class="contact-form" id="leadFormSheets" onsubmit="return false;">
+          <div class="row">
+            <label>שם מלא<input required name="name" placeholder="איך לקרוא לכם?"></label>
+            <label>טלפון<input required name="phone" inputmode="tel" placeholder="מספר ליצירת קשר"></label>
+          </div>
+          <div class="row">
+            <label>תאריך האירוע<input name="event_date" type="date"></label>
+            <label>סוג האירוע<select name="event_type">
+              <option>בר/בת מצווה</option><option>חתונה</option><option>ברית/ה</option><option>אירוע חברה</option><option>אחר</option>
+            </select></label>
+          </div>
+          <label>בחירת חבילה
+            <select name="package" id="packageSelect" required>
+              <option value="Basic">Basic</option>
+              <option value="Pro">Pro</option>
+              <option value="VIP">VIP</option>
+              <option value="פרטים בלבד">פרטים בלבד</option>
+            </select>
+          </label>
+          <label>הודעה<textarea name="msg" rows="4" placeholder="ספרו לי בקצרה על האירוע"></textarea></label>
+          <div class="row actions">
+            <button type="submit" class="btn primary" id="submitBtn">שליחה</button>
+            <a class="btn ghost" href="mailto:hello@example.com">או שלחו מייל</a>
+          </div>
+          <p class="fine" id="formMsg">בלחיצה על שליחה אצור קשר בהקדם. ניתן גם בוואטסאפ ↓</p>
+        </form>
+      </div>
     </section>
   </main>
 
-  <script src="script.js"></script>
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <img src="logo.png" alt="" width="120" height="42" loading="lazy"/>
+      <nav class="footer-nav" aria-label="ניווט בתחתית">
+        <a href="#services">שירותים</a><a href="#packages">חבילות</a>
+        <a href="#gallery">גלריה</a><a href="#contact">קשר</a>
+      </nav>
+      <small>© <span id="year"></span> להב סטודיו</small>
+    </div>
+  </footer>
+
+  <a class="whatsapp-fab" href="https://wa.me/972000000000" target="_blank" rel="noopener">WhatsApp</a>
+
+  <script src="script.js?v=522" defer defer defer></script>
 </body>
 </html>
